fix height overflow

--- a/src/components/side-bar/side-bar.module.css
+++ b/src/components/side-bar/side-bar.module.css
@@ -47,6 +47,10 @@
   height: 30px;
 }
 
+.collapse {
+  overflow: auto;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -64,6 +68,10 @@
 
 .panel {
   border-top: 1px solid var(--outlineColor);
+}
+
+.white {
+  border: 4px solid black;
 }
 
 :global(.ant-collapse-header) {
